--- a/client/package.json
+++ b/client/package.json
@@ -3,9 +3,13 @@
     "private": true,
     "version": "0.0.0",
     "type": "module",
+    "engines": {
+        "node": "18.x"
+    },
     "scripts": {
         "dev": "vite",
         "build": "vite build",
+        "serve": "vite preview",
         "lint": "eslint .",
         "preview": "vite preview"
     },
